2006-09-16  Casey Marshall  <csm@gnu.org>

	* NEWS: updated.
	* configure.ac (AC_CHECK_HEADERS): check for `sys/event.h'.
	(AC_CHECK_FUNCS): add checks for readv, writev, getifaddrs,
	kqueue, and kevent.
	(HAVE_INET6): define if IPv6 is supported.
	* gnu/java/net/PlainDatagramSocketImpl.java (channel): new field.
	(native_fd): removed.
	(impl): new field.
	(<init>): throw IOException; initialize fields.
	(finalize): removed.
	(getNativeFD): removed.
	(bind): use `PlainSocketImpl.bind.'
	(create): use `PlainSocketImpl.initSocket.'
	(disconnect): use `PlainSocketImpl.disconnect.'
	(getLocalPort): new method.
	(send): use `VMChannel.send.'
	(receive): use `VMChannel.receive.'
	(setOption): use `PlainSocketImpl.setOption.'
	(getOption): use `PlainSocketImpl.getOption.'
	(close): use `VMChannel.State.close.'
	(join): use `PlainSocketImpl.join.'
	(leave): use `PlainSocketImpl.leave.'
	(joinGroup, leaveGroup): implemented.
	* gnu/java/net/PlainSocketImpl.java: make non-final.
	(native_fd): removed.
	(impl): new field.
	(channel): new field.
	(<init>): initialize `impl.'
	(finalize, getNativeFD): removed.
	(setOption): use `PlainSocketImpl.setOption.'
	(getOption): use `PlainSocketImpl.getOption.'
	(shutdownInput): use `PlainSocketImpl.shutdownInput.'
	(shutdownOutput): use `PlainSocketImpl.shutdownOutput.'
	(create): create `channel,' initialize `impl's native state.
	(connect): use `connect(SocketAddress, int).'
	(connect): use `SocketChannelImpl.connect;' initialize `address'
	and `port.'
	(bind): use `VMPlainSocketImpl.bind.'
	(listen): use `VMPlainSocketImpl.listen.'
	(accept): use `SocketChannelImpl.accept.'
	(available): use `VMChannel.available.'
	(close): use `PlainSocketImpl.close.'
	(sendUrgentData): use `PlainSocketImpl.sendUrgentData.'
	(getVMChannel, getInetAddress, getLocalPort, getLocalAddress,
	getPort): new methods.
	(SocketInputStream.read): use `VMChannel.read.'
	(SocketInputStream.read): use `SocketChannel.read.'