@@ -1,3 +1,12 @@
+2006-09-17  Chris Burdess  <dog@gnu.org>
+
+	Fixes PR 27610 27687.
+	* gnu/xml/dom/ls/SAXEventSink.java: Permit limited subclassing.
+	* gnu/xml/transform/SAXTemplatesHandler.java,
+	* gnu/xml/transform/SAXTransformerHandler.java: New files.
+	* gnu/xml/transform/TransformerFactoryImpl.java: Implement
+	  SAXTransformerFactory.
+
 2006-09-16  Casey Marshall  <csm@gnu.org>
 
 	* NEWS: updated.
